--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           name: Deploy Changed Files Only
           command: |
             CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD | grep -E '^(.*\.php|.*\.css|.*\.js|.*\.png|.*\.jpg|.*\.svg|.*\.json)')
-            
+
             if [ -z "$CHANGED_FILES" ]; then
               echo "✅ No theme files changed, skipping deploy."
               exit 0
@@ -23,9 +23,15 @@ jobs:
 
             for file in $CHANGED_FILES; do
               echo "⬆️ Uploading $file..."
-              lftp -u $SFTP_USER,$SFTP_PASSWORD sftp://$SFTP_HOST <<EOF
-              set ssl:verify-certificate no
-              put -O /home/hrmdevsspace/public_html/maxcyte.devsspace.com/wp-content/themes/bb-theme-child/ $file
-              bye
+              lftp -u $SFTP_USER,$SFTP_PASSWORD sftp://$SFTP_HOST <<-EOF
+                set ssl:verify-certificate no
+                put -O /home/hrmdevsspace/public_html/maxcyte.devsspace.com/wp-content/themes/bb-theme-child/ $file
+                bye
 EOF
             done
+
+workflows:
+  version: 2
+  deploy_on_push:
+    jobs:
+      - deploy
