--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,28 +9,17 @@ jobs:
       - run:
           name: Install lftp
           command: |
-            sudo apt-get update
+            sudo apt-get update -y
             sudo apt-get install -y lftp
       - run:
-          name: Deploy Changed Theme Files
+          name: Deploy Theme via SFTP
           command: |
-            echo "🔍 Checking for changed theme files..."
-            CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD | grep '^')
-
-            if [ -z "$CHANGED_FILES" ]; then
-              echo "✅ No theme files changed. Skipping deployment."
-              exit 0
-            fi
-
-            for file in $CHANGED_FILES; do
-              echo "⬆️ Uploading $file ..."
-              lftp -u $SFTP_USER,$SFTP_PASSWORD sftp://$SFTP_HOST <<EOF
-set ssl:verify-certificate no
-cd /home/hrmdevsspace/public_html/maxcyte.devsspace.com/wp-content/themes/bb-theme-child/
-put -O . $file
-bye
-EOF
-            done
+            echo "⬆️ Deploying theme to server..."
+            lftp -u $SFTP_USER,$SFTP_PASSWORD sftp://$SFTP_HOST -e "
+              set ssl:verify-certificate no;
+              mirror -R ./ /home/hrmdevsspace/public_html/maxcyte.devsspace.com/wp-content/themes/bb-theme-child/;
+              bye
+            "
 
 workflows:
   version: 2
