--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ jobs:
             sudo apt-get update -y
             sudo apt-get install -y lftp
       - run:
-          name: Deploy Theme via SFTP
+          name: Deploy Theme via FTP
           command: |
             echo "⬆️ Deploying theme to server..."
-            lftp -u "$SFTP_USER","$SFTP_PASSWORD" sftp://"$SFTP_HOST" -e "
+            lftp -u "$FTP_USER","$FTP_PASSWORD" ftp://"$FTP_HOST" -e "
               set ssl:verify-certificate no;
               mirror -R \
                 --parallel=5 \
@@ -23,7 +23,7 @@ jobs:
                 --verbose \
                 --exclude-glob .git/ \
                 --exclude-glob .circleci/ \
-                ./ '/home/hrmdevsspace/public_html/maxcyte.devsspace.com/wp-content/themes/bb-theme-child/';
+                ./ \"/home/hrmdevsspace/public_html/maxcyte.devsspace.com/wp-content/themes/bb-theme-child/\"; 
               bye
             "
 
