--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,39 +6,31 @@ jobs:
       - image: cimg/base:stable
     steps:
       - checkout
-
       - run:
           name: Install lftp
           command: |
             sudo apt-get update -y
             sudo apt-get install -y lftp
-
-      - run:
-          name: Validate Deployment Path
-          command: |
-            echo "🔍 Checking deployment path on server..."
-            lftp -u $FTP_USER,$FTP_PASSWORD -p 21 ftp://$FTP_HOST -e "
-              cd /maxcyte.devsspace.com/wp-content/themes/bb-theme-child/ || (echo '❌ ERROR: Deployment path not found!' && exit 1);
-              bye
-            "
-            echo "✅ Deployment path exists."
-
       - run:
           name: Deploy Theme via FTP
           command: |
-            echo "⬆️ Deploying theme to server..."
+            echo "⬆️ Starting deployment to server..."
             lftp -u $FTP_USER,$FTP_PASSWORD -p 21 ftp://$FTP_HOST -e "
               set ftp:ssl-allow no;
+              set ssl:verify-certificate no;
+              echo '🔍 Checking deployment path...';
+              cd /maxcyte.devsspace.com/wp-content/themes/bb-theme-child/ || (echo '❌ ERROR: Deployment path not found!' && exit 1);
+              echo '📂 Path verified. Uploading files...';
               mirror -R \
                 --parallel=5 \
                 --only-newer \
                 --verbose \
                 --exclude-glob .git/ \
                 --exclude-glob .circleci/ \
-                ./ /maxcyte.devsspace.com/wp-content/themes/bb-theme-child/ || (echo '❌ ERROR: Upload failed!' && exit 1);
+                ./ /maxcyte.devsspace.com/wp-content/themes/bb-theme-child/;
+              echo '✅ Deployment complete!';
               bye
             "
-            echo "✅ Deployment completed successfully."
 
 workflows:
   version: 2
