--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,35 +6,27 @@ jobs:
       - image: cimg/base:stable
     steps:
       - checkout
+
       - run:
-          name: Install lftp
-          command: |
-            sudo apt-get update -y
-            sudo apt-get install -y lftp
+          name: Install FTP client
+          command: sudo apt-get update && sudo apt-get install -y lftp
+
       - run:
-          name: Deploy Theme via FTP
+          name: Deploy bb-theme-child via FTP
           command: |
             echo "⬆️ Starting deployment to server..."
-            lftp -u $FTP_USER,$FTP_PASSWORD -p 21 ftp://$FTP_HOST -e "
+            lftp -e "
               set ftp:ssl-allow no;
-              set ssl:verify-certificate no;
-              echo '🔍 Checking deployment path...';
-              cd /maxcyte.devsspace.com/wp-content/themes/bb-theme-child/ || (echo '❌ ERROR: Deployment path not found!' && exit 1);
-              echo '📂 Path verified. Uploading files...';
-              mirror -R \
-                --parallel=5 \
-                --only-newer \
-                --verbose \
-                --exclude-glob .git/ \
-                --exclude-glob .circleci/ \
-                ./ /maxcyte.devsspace.com/wp-content/themes/bb-theme-child/;
-              echo '✅ Deployment complete!';
+              set net:timeout 20;
+              set net:max-retries 2;
+              open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER;
+              mirror -R ./ /home/hrmdevsspace/public_html/maxcyte.devsspace.com/wp-content/themes/bb-theme-child/ --ignore-time --parallel=2 --verbose;
               bye
             "
 
 workflows:
   version: 2
-  deploy_on_push:
+  deploy-workflow:
     jobs:
       - deploy:
           filters:
