--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             sudo apt-get update -y
             sudo apt-get install -y lftp
 
-           - run:
+      - run:
           name: Test FTP connectivity
           command: |
             echo "🔍 Testing FTP connection to $FTP_SERVER ..."
@@ -25,7 +25,6 @@ jobs:
             " || (echo "❌ FTP connection failed (check FTP_SERVER / FTP_USERNAME / FTP_PASSWORD)" && exit 1)
             echo "✅ FTP reachable."
 
-
       - run:
           name: Validate remote theme path
           command: |
@@ -34,7 +33,8 @@ jobs:
               set ftp:ssl-allow true;
               set ssl:verify-certificate no;
               cd /maxcyte.devsspace.com/wp-content/themes/bb-theme-child/ || (echo '❌ ERROR: Remote theme path not found' && exit 1);
-              bye"
+              bye
+            "
             echo "✅ Remote path exists."
 
       - run:
@@ -47,7 +47,7 @@ jobs:
               set net:timeout 20;
               set net:max-retries 2;
               open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER;
-              mirror -R ./bb-theme-child /maxcyte.devsspace.com/wp-content/themes/bb-theme-child --ignore-time --parallel=2 --verbose;
+              mirror -R ./bb-theme-child /wp-content/themes/bb-theme-child --ignore-time --parallel=2 --verbose;
               bye
             "
             echo "✅ Deployment finished."
